--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
