--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.13.1",
+    "react-image-magnify": "^2.7.4",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
