--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
+    "google-maps-react": "^2.0.2",
     "lodash": "^4.17.15",
     "qs": "^6.9.3",
     "react": "^16.13.1",
